<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="30dp">

        <TextView
            android:id="@+id/txtStartTitle"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/start_time"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtStartTime"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/txtStartTitle"
            android:gravity="center"
            android:text="00:00:00"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtEndTitle"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/txtStartTitle"
            android:gravity="center"
            android:text="@string/end_time"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtEndTime"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/txtStartTime"
            android:layout_toRightOf="@id/txtEndTitle"
            android:gravity="center"
            android:text="00:00:00"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtTotalTimeTitle"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/txtEndTime"
            android:gravity="center"
            android:text="@string/total_time"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtTotalTime"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/txtEndTime"
            android:layout_toRightOf="@id/txtTotalTimeTitle"
            android:gravity="center"
            android:text="00:00:00"
            android:textSize="22sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/work_content"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editContent"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="top|left"
            android:hint="@string/input_content"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/delete" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnOK"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>