<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/txtStartTitle"
            android:text="@string/start_time"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="22sp"
            android:id="@+id/txtStartTime"
            android:layout_toRightOf="@id/txtStartTitle"
            android:text="00:00:00"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="22sp"
            android:id="@+id/txtEndTitle"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/txtStartTitle"
            android:text="@string/end_time"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="22sp"
            android:id="@+id/txtEndTime"
            android:layout_below="@id/txtStartTime"
            android:layout_toRightOf="@id/txtEndTitle"
            android:text="00:00:00"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="22sp"
            android:id="@+id/txtTotalTimeTitle"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/txtEndTime"
            android:text="@string/total_time"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="22sp"
            android:id="@+id/txtTotalTime"
            android:layout_below="@id/txtEndTime"
            android:layout_toRightOf="@id/txtTotalTimeTitle"
            android:text="00:00:00"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="22sp"
            android:id="@+id/txtPauseTitle"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/txtTotalTimeTitle"
            android:text="@string/pause_count"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="22sp"
            android:id="@+id/txtPause"
            android:layout_below="@id/txtTotalTime"
            android:layout_toRightOf="@id/txtPauseTitle"
            android:text="3"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/expand"
            android:id="@+id/btnExpand"
            android:layout_below="@id/txtTotalTime"
            android:layout_toRightOf="@id/txtPause"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/work_content"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editContent"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="top|left"
            android:textSize="18sp"
            android:hint="@string/input_content" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:text="@string/ok" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>